--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,49 +1,70 @@
-@misc{Li2020fractional,
-      title={Fractional Excitation Induced Giant Phonon Anomalies in the Proximate Kitaev Quantum Spin Liquid 	α-RuCl<sub>3</sub>},
-      author={H. Li and T. T. Zhang and A. Said and G. Fabbris and D. G. Mazzone and J. Q. Yan and D. Mandrus and G. B. Halasz and S. Okamoto and S. Murakami and M. P. M. Dean and H. N. Lee and H. Miao},
-      year={2020},
-      pages={2011.07036},
-      arxiv={2011.07036},
+@misc{kucharski2020virus,
+      title={Virus spreading in ride-pooling networks. Can ride-pooling become a safe and sustainable mobility alternative for pandemic urban systems?}, 
+      author={\textbf{R.} \underline{\textbf{Kucharski}} and Oded Cats and Julian Sienkiewicz},
+      year={2020, submitted to: Scientific Reports},
+      eprint={2011.12770},
       archivePrefix={arXiv},
-      primaryClass={cond-mat.str-el}
+      primaryClass={physics.soc-ph},
+      note = {\textsc{if}:\textbf{3.998}, \textsc{MNiSW}:\textbf{100}pkt.},
+      keywords = {preprint}
 }
 
-@misc{li2020observation,
-      title={Observation of a Chiral Wave Function in Twofold Degenerate Quadruple Weyl System BaPtGe},
-      author={Haoxiang Li and Tiantian Zhang and A. Said and Y. Fu and G. Fabbris and D. G. Mazzone and J. Zhang and J. Lapano and H. N. Lee and H. C. Lei and M. P. M. Dean and S. Murakami and H. Miao},
-      year={2020},
-      pages={2010.00764},
-      arxiv={2010.00764},
+@misc{kucharski2020maassim,
+      title={MaaSSim -- agent-based two-sided mobility platform simulator}, 
+      author={\textbf{Rafał} \underline{\textbf{Kucharski}} and Oded Cats},
+      year={2020, submitted to: SoftwareX},
+      eprint={2011.12827},
       archivePrefix={arXiv},
-      primaryClass={cond-mat.mtrl-sci}
+      primaryClass={cs.MA},
+      note = {\textsc{if}:\textbf{2.14}, \textsc{MNiSW}:\textbf{200}pkt.},
+      keywords = {preprint}
 }
 
-@misc{lin2020strong,
-    title={Strong Superexchange in a d<sup>9-δ</sup> Nickelate Revealed by Resonant Inelastic X-Ray Scattering},
-    author={J. Q. Lin and P. Villar Arribi and G. Fabbris and A. S. Botana and D. Meyers and H. Miao and Y. Shen and D. G. Mazzone and J. Feng and S. G. Chiuzbaian and A. Nag and A. C. Walters and M. Garcia-Fernandez and Ke-Jin Zhou and J. Pelliciari and I. Jarrige and J. W. Freeland and Junjie Zhang and J. F. Mitchell and V. Bisogni and X. Liu and M. R. Norman and M. P. M. Dean},
-    year={2020},
-    pages={2008.08209},
-    arxiv={2008.08209},
-    archivePrefix={arXiv},
-    primaryClass={cond-mat.supr-con}
+
+
+@misc{arjen,
+  title={Evolution of Labour Supply in Ridesourcing},
+  author={de Ruijter, Arjan and Cats, Oded and \textbf{Kucharski}, \textbf{Rafał} and van Lint, Hans},
+  journal={Transportmetrica: B},
+  number={under review},
+  year={2020, submitted to: Transportmetrica B},
+  pages={-},
+  note = {\textsc{if}:\textbf{2.214}, \textsc{MNiSW}:\textbf{100}pkt.},
+      keywords = {preprint}
 }
 
-@misc{mazzone2020trapped,
-    title={Trapped Transient Magnons in the Gapped Antiferromagnet Sr<sub>3</sub>Ir<sub>2</sub>O<sub>7</sub>},
-    author={D. G. Mazzone and D. Meyers and Y. Cao and J. G. Vale and C. D. Dashwood and Y. Shi and A. J. A. James and N. J. Robinson and J. Q. Lin and V. Thampy and Y. Tanaka and A. S. Johnson and H. Miao and R. Wang and T. A. Assefa and J. Kim and D. Casa and R. Mankowsky and D. Zhu and R. Alonso-Mori and S. Song and H. Yavas and T. Katayama and M. Yabashi and Y. Kubota S. Owada and J. Liu and J. Yang and R. M. Konik and I. K. Robinson and J. P. Hill and D. F. McMorrow and M. Forst and S. Wall and X. Liu and M. P. M. Dean},
-    pages={2002.07301},
-    year={2020},
-    arxiv={2002.07301},
-    archivePrefix={arXiv},
-    primaryClass={cond-mat.str-el}
+@misc{uber,
+  title={Beyond the Dichotomy:  How Ride-hailing Competes with and Complements Public Transport},
+  author={Cats, Oded and \textbf{Kucharski}, \textbf{Rafał} and Danda, Satnos and Yapp, Menno},
+  journal={Science Advances},
+  number={under review},
+  year={2020, submitted to: Science Advances},
+  pages={-},
+  note = {\textsc{if}:\textbf{13.11}, \textsc{MNiSW}:\textbf{200}pkt.},
+  
+      keywords = {preprint}
 }
 
-@article{miao2020discovery,
-    title={Discovery of Charge Density Waves in Cuprate Superconductors up to the Critical Doping and Beyond},
-    author={H. Miao and G. Fabbris and C. S. Nelson and R. Acevedo-Esteves and Y. Li and G. D. Gu and T. Yilmaz and K. Kaznatcheev and E. Vescovo and M. Oda and K. Kurosawa and N. Momono and T. A. Assefa and I. K. Robinson and J. M. Tranquada and P. D. Johnson and M. P. M. Dean},
-    year={2020},
-    pages={2001.10294},
-    arxiv={2001.10294},
-    journal={arXiv:},
-    primaryClass={cond-mat.supr-con}
+
+
+@misc{wtw,
+  title={Willingness to wait with real-time crowding in urban public transport},
+  author={Drabicki A., \textbf{Kucharski} R. and Cats O.},
+  journal={-},
+  number={under review},
+  year={2020, submitted to Transportation Research Part A: Policy and Practice},
+  note = {\textsc{if}:\textbf{3.693}, \textsc{MNiSW}:\textbf{140}pkt.},
+  pages={-},
+  keywords = {preprint}
+}
+
+@misc{banet,
+  title={Using city-bike stopovers to identify urban tourism hotspots},
+  author={Banet, Krystian and \textbf{Kucharski}, R. and Naumov, V.},
+  journal={-},
+  number={under review},
+  year={2020, submitted to Current Issues in Tourism},
+  pages={-},
+  note = {\textsc{if}:\textbf{4.147}, \textsc{MNiSW}:\textbf{140}pkt.},
+  keywords = {preprint}
 }
