--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,7 +80,7 @@
     year = {2020},
     doi = {10.1177/0361198120932160},
         abstract = { With the increasing availability of big, transport-related datasets, detailed data-driven mobility analysis is becoming possible. Trips with their origins, destinations, and travel times are now collected in publicly available databases, allowing for detailed demand forecasting with methods exploiting big and accurate data. In this paper, we predict the demand pattern of New York City bikes with a low-dimensional approach utilizing three-level data clustering. We use historical demand data along with temperature and precipitation to first aggregate and then decompose data to obtain meaningful clusters. The core of this approach lies in the proposed clustering technique, which reduces the dimension of the problem and, differently from other machine learning techniques, requires limited assumptions on the model or its parameters. The proposed method allows, for the given temperature and precipitation method, to obtain expected vector of movement (mean number and direction of trips) for each zone. In this paper, we synthesize more than 17 million trips into daily and zonal vectors of movement, which combined with weather data allow forecasting of the trip demand. The method allows us to predict the demand with over 75\% accuracy, as shown in series of experiments in which various settings and parameterizations are validated against 25\% holdout data. },
-    addendum = {\\ \textsc{if}:\textbf{0.695}, \textsc{MNiSW}:\textbf{40}pkt.},
+    addendum = {IF:0.695, MNiSW:40p},
     keywords = {journalpaper}
 }
 }
@@ -130,7 +130,7 @@ keywords = {journalpaper},
 	
 
 @article{vdf,
-    author={\underline{\textbf{Kucharski}}, Rafa{\l}
+    author={Kucharski, Rafa{\l}
     and Drabicki, Arkadiusz},
     title={Estimating Macroscopic Volume Delay Functions with the Traffic Density Derived from Measured Speeds and Flows},
     journal={Journal of Advanced Transportation},
