--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,22 +1,22 @@
 @misc{kucharski2020virus,
       title={Virus spreading in ride-pooling networks. Can ride-pooling become a safe and sustainable mobility alternative for pandemic urban systems?}, 
-      author={\textbf{R.} \underline{\textbf{Kucharski}} and Oded Cats and Julian Sienkiewicz},
+      author={R. Kucharski} and Oded Cats and Julian Sienkiewicz},
       year={2020, submitted to: Scientific Reports},
       eprint={2011.12770},
       archivePrefix={arXiv},
       primaryClass={physics.soc-ph},
-      note = {\textsc{if}:\textbf{3.998}, \textsc{MNiSW}:\textbf{100}pkt.},
+      note = {IF:3.998, MNiSW:100p},
       keywords = {preprint}
 }
 
 @misc{kucharski2020maassim,
       title={MaaSSim -- agent-based two-sided mobility platform simulator}, 
-      author={\textbf{Rafał} \underline{\textbf{Kucharski}} and Oded Cats},
+      author={Rafał Kucharski and Oded Cats},
       year={2020, submitted to: SoftwareX},
       eprint={2011.12827},
       archivePrefix={arXiv},
       primaryClass={cs.MA},
-      note = {\textsc{if}:\textbf{2.14}, \textsc{MNiSW}:\textbf{200}pkt.},
+      note = {IF:2.14, MNiSW:200p},
       keywords = {preprint}
 }
 
@@ -24,47 +24,46 @@
 
 @misc{arjen,
   title={Evolution of Labour Supply in Ridesourcing},
-  author={de Ruijter, Arjan and Cats, Oded and \textbf{Kucharski}, \textbf{Rafał} and van Lint, Hans},
+  author={de Ruijter, Arjan and Cats, Oded and Kucharski, Rafał and van Lint, Hans},
   journal={Transportmetrica: B},
   number={under review},
   year={2020, submitted to: Transportmetrica B},
   pages={-},
-  note = {\textsc{if}:\textbf{2.214}, \textsc{MNiSW}:\textbf{100}pkt.},
+  note = {IF:2.214, MNiSW:100p},
       keywords = {preprint}
 }
 
 @misc{uber,
   title={Beyond the Dichotomy:  How Ride-hailing Competes with and Complements Public Transport},
-  author={Cats, Oded and \textbf{Kucharski}, \textbf{Rafał} and Danda, Satnos and Yapp, Menno},
+  author={Cats, Oded and Kucharski, Rafał and Danda, Satnos and Yapp, Menno},
   journal={Science Advances},
   number={under review},
-  year={2020, submitted to: Science Advances},
+  year={2020, submitted to: Journal of Transport Geography},
   pages={-},
-  note = {\textsc{if}:\textbf{13.11}, \textsc{MNiSW}:\textbf{200}pkt.},
+  note = {IF:13.11, MNiSW:200p},
   
       keywords = {preprint}
 }
 
 
-
 @misc{wtw,
   title={Willingness to wait with real-time crowding in urban public transport},
-  author={Drabicki A., \textbf{Kucharski} R. and Cats O.},
+  author={Drabicki A., Kucharski R. and Cats O.},
   journal={-},
   number={under review},
   year={2020, submitted to Transportation Research Part A: Policy and Practice},
-  note = {\textsc{if}:\textbf{3.693}, \textsc{MNiSW}:\textbf{140}pkt.},
+  note = {IF:3.693, MNiSW:140p},
   pages={-},
   keywords = {preprint}
 }
 
 @misc{banet,
   title={Using city-bike stopovers to identify urban tourism hotspots},
-  author={Banet, Krystian and \textbf{Kucharski}, R. and Naumov, V.},
+  author={Banet, Krystian and Kucharski, R. and Naumov, V.},
   journal={-},
   number={under review},
   year={2020, submitted to Current Issues in Tourism},
   pages={-},
-  note = {\textsc{if}:\textbf{4.147}, \textsc{MNiSW}:\textbf{140}pkt.},
+  note = {IF:4.147, MNiSW:140p},
   keywords = {preprint}
 }
