--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,6 +1,6 @@
 @misc{kucharski2020virus,
       title={Virus spreading in ride-pooling networks. Can ride-pooling become a safe and sustainable mobility alternative for pandemic urban systems?}, 
-      author={R. Kucharski} and Oded Cats and Julian Sienkiewicz},
+      author={R. Kucharski and Oded Cats and Julian Sienkiewicz},
       year={2020, submitted to: Scientific Reports},
       eprint={2011.12770},
       archivePrefix={arXiv},
