--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
     publisher = {Taylor & Francis},
     doi = {10.1080/23249935.2020.1829170},
     keywords = {journalpaper},
-    addendum = {IF:2.60, MNiSW:100p}
+    note = {IF:2.60, MNiSW:100p}
 }
 
 
@@ -38,7 +38,7 @@
     year  = {2020},
     publisher = {Taylor & Francis},
     doi = {10.1080/23249935.2020.1809547},
-    addendum = {IF:2.60, MNiSW:100p},
+    note = {IF:2.60, MNiSW:100p},
     keywords = {journalpaper}
 }
 
@@ -53,7 +53,7 @@
     doi = "10.1016/j.trd.2019.08.021",
     author = "Michał A. Niedzielski and Rafał Kucharski",
     abstract = "Urban spatial structure, transport mode and space-time constraints are known to affect accessibility to activities for a city’s residents. However, most studies measure accessibility from home only and report accessibility in terms of the travel time or number of activities. Such studies neglect the mobility and time budget constraints on people’s accessibility. Furthermore, modal accessibility disparity studies have not considered inequality between modes during the afternoon commute. We examine accessibility to non-work activities by automobile and public transport using spatiotemporal measures that determine the number of minutes people have available to participate in activities, given time budget and activity duration constraints, rather than simply the number of activities. We examine modal accessibility disparity in Warsaw, Poland. Our two major findings are the reverse of findings in previous studies: that disparity shifts toward public transport as the activity duration increases and the travel time decreases; and that it shifts toward public transport with increasing distance away from the city center.",
-    addendum = {IF:4.05, MNiSW:140p},
+    note = {IF:4.05, MNiSW:140p},
     keywords = {journalpaper}
 }
 
@@ -66,7 +66,7 @@
     doi = "10.1016/j.trb.2018.12.001",
     author = "Rafał Kucharski and Guido Gentile",
     abstract = "We present the Information Comply Model (ICM) which extends the framework for macroscopic within-day DTA proposed by Gentile (2016) to represent the rerouting of drivers wrt a single traffic event. Rerouting is reproduced as a two-stage process: first, drivers become aware about the event and its consequences on traffic; second, drivers may decide to change path. At each arc, unaware drivers have a probability of being informed by multiple ATIS sources (radio, VMS, mobile apps), which depends not only on devise penetration rates, but also on users space and time coordinates wrt the position and interval of the event. At each node, aware drivers, who are somehow reluctant to change, may finally modify their path based on a random rerouting utility, which is composed of expected gains and avoided losses. ICM is thus capable of representing the evolution of rerouting phenomena in time and space when the information about a traffic event and its consequences on congestion spread among drivers and onto the network. This way, ICM extends the concept of dynamic user equilibrium to a case of imperfect information related to availability and awareness rather than to individual perception, as well as to a case of bounded rationality with prudent drivers. Besides the model architecture and specification, this paper provides a workable methodology which can be applied both off-line for transport planning and in real-time for traffic management on large size networks.",
-    addendum = {IF:4.79, MNiSW:200p},
+    note = {IF:4.79, MNiSW:200p},
     keywords = {journalpaper}
 }
 
@@ -80,7 +80,7 @@
     year = {2020},
     doi = {10.1177/0361198120932160},
         abstract = { With the increasing availability of big, transport-related datasets, detailed data-driven mobility analysis is becoming possible. Trips with their origins, destinations, and travel times are now collected in publicly available databases, allowing for detailed demand forecasting with methods exploiting big and accurate data. In this paper, we predict the demand pattern of New York City bikes with a low-dimensional approach utilizing three-level data clustering. We use historical demand data along with temperature and precipitation to first aggregate and then decompose data to obtain meaningful clusters. The core of this approach lies in the proposed clustering technique, which reduces the dimension of the problem and, differently from other machine learning techniques, requires limited assumptions on the model or its parameters. The proposed method allows, for the given temperature and precipitation method, to obtain expected vector of movement (mean number and direction of trips) for each zone. In this paper, we synthesize more than 17 million trips into daily and zonal vectors of movement, which combined with weather data allow forecasting of the trip demand. The method allows us to predict the demand with over 75\% accuracy, as shown in series of experiments in which various settings and parameterizations are validated against 25\% holdout data. },
-    addendum = {IF:0.695, MNiSW:40p},
+    note = {IF:0.695, MNiSW:40p},
     keywords = {journalpaper}
 }
 }
@@ -102,7 +102,7 @@
     pages={3096260},
     abstract={We propose a new method to estimate benefits of road network improvements, which allows to include the induced demand without arbitrary assumptions. Instead of estimating induced demand (which is nontrivial and hardly possible in practice), we search for demand induction where initial benefits are mitigated to zero. Such approach allows to formulate a dual measure of benefit, covering both the potential benefits and the likelihood of consuming them by the induced traffic. We first estimate benefits of road network improvement assuming that traffic demand is fixed. Consequently, we find demand model configurations at which the benefits of the new investment become null, i.e., all the initial benefits are consumed by the traffic demand growth. We call such states of induced demand the Lewis{\&}{\#}x2013;Mogridge points of the analysed improvement. We select the most probable of such points and use it to calculate the proposed novel indicator <italic>{\&}{\#}x3bc;</italic>, for which the initial benefits (obtained under a fixed-demand assumption) are multiplied with a demand increase rate needed to consume them. We believe that such measure allows to include the critical phenomena of induced traffic and, at the same time, to overcome problems associated with reliable estimation of induced demand. As we illustrate with the case of two alternative road improvement schemes in Krak{\&}{\#}xf3;w, Poland, the proposed method allows to estimate maximal threshold of induced traffic and to select scenario more resilient to induced traffic.},
     doi={10.1155/2020/3096260},
-    addendum = {IF:1.67, MNiSW:70p},
+    note = {IF:1.67, MNiSW:70p},
     keywords = {journalpaper}
 }
 
@@ -123,7 +123,7 @@ The objective of this paper is to propose a method to analyse and describe cycli
 To bridge this gap, we introduce the technique to observe multichannel queues and report relevant observations, which we then complement with a methodological framework to analyse obtained results and provide a complete multichannel queue description. We video-record cyclists as they enqueue to one of multiple channels, form the queue and smoothly merge into a single lane again as the queue discharges. We apply the method to analyse results from a pilot study of 160 cyclists forming 50 queues in the city of Krakow, Poland. The proposed method allows us to analyse and quantify the observed queue performance and its characteristics: the number of channels, their emergence process, channel and queue lengths, discharge process with FIFO violations, starting and discharging times. Findings from pilot study reveal that both queue length and discharge times strongly depend on queue formation process.
 The contribution of this paper is the method to describe multichannel cyclist queueing behaviour, enriching current picture of bicycle flow and cyclists’ behaviour. Since the method has been developed on relatively short queues (up to 10 cyclists), findings included in this paper primarily refer to such queue sizes. Nonetheless, the method is formulated in a generic way, applicable also for longer bicycle queues. Possible practical implications are new estimates for queue lengths and discharge times - useful for bicycle infrastructure design and traffic engineering purposes.},
 		doi = {10.18757/ejtir.2019.19.2.4379},
-addendum = {IF:1.70, MNiSW:70p},
+note = {IF:1.70, MNiSW:70p},
 keywords = {journalpaper},
 }
 
@@ -138,7 +138,7 @@ keywords = {journalpaper},
     day={26},
     publisher={Hindawi},
     volume={2017},    
-    addendum = {IF:1.67, MNiSW:70p.},
+    note = {IF:1.67, MNiSW:70p.},
     doi={10.1155/2017/4629792},
     keywords = {journalpaper}
 }
