--- a/_bibliography/other.bib
+++ b/_bibliography/other.bib
@@ -1,6 +1,6 @@
 @ARTICLE{Drabicki20177,
 author={Drabicki, A. and Kucharski, R. and Szarata, A.},
-title={Modelling the public transport capacity constraints' impact on passenger path choices in transit assignment models},
+title={Modelling the public transport capacity constraints impact on passenger path choices in transit assignment models},
 journal={Archives of Transport},
 year={2017},
 volume={43},
@@ -73,7 +73,7 @@ keywords = {scopus}
 
 @ARTICLE{Kucharski2019114,
 author={Kucharski, R. and Kulpa, T. and Mielczarek, J. and Drabicki, A.},
-title={Method to decompose regional travel demand model -case study of kraków region},
+title={Method to decompose regional travel demand model -case study of Krakow region},
 journal={Lecture Notes in Networks and Systems},
 year={2019},
 volume={51},
